vlib/v/checker/tests/for_in_map_one_variable_err.vv
fn main() {
	kvs := {
		'foo': 'bar'
	}
	for k in kvs {
		println('${k}')
	}
}
